syntax = "proto3";
package notification;
option go_package = "protobuf/proto/notification";

import "google/protobuf/empty.proto";
import "proto/common/common.proto";

service Notification {
    rpc heartbeat(google.protobuf.Empty) returns (common.MessageResponse) {}
    rpc clientHeartbeat(UserSession) returns (common.MessageResponse) {}
    rpc broadcastUserPresenceEvent(UserPresence) returns (common.MessageResponse) {}
    rpc broadcastMessageEvent(common.Message) returns (common.MessageResponse) {}
    rpc getOnlineUsers(UserIds) returns (UserIds) {}
}

message UserSession {
    string userId = 1;
    string server = 2;
} 

message UserPresence {
    string userId = 1;
    string status = 2;
}

message UserIds {
    repeated string userIds = 1;
}